--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="manifest" href="manifest.json" />
+		<link rel="icon" href="icon-512.png" />
 		<title>Archery Scorer</title>
 	</head>
 	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
+		<script>
+			if ('serviceWorker' in navigator) {
+				navigator.serviceWorker.register('sw.js');
+			}
+		</script>
 	</body>
 </html>
